# F1_25_telemetry_app

./: CMakeLists.txt  READ.me  README.md  execute.sh  telemetry_reader
backend/: main.py
src/: main.c  udp_packet_processer.h  udp_receiver.c
src/linker/: tcp_exporter.c  tcp_exporter.h
src/network/: udp_receiver.h
udp_server_sim/: udp_server.py
